[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.4"
rocket = "0.4.11"
rocket_contrib = { version = "*", features = ["json"] }
rocket_cors = "0.5.2"
rusqlite = "0.29.0"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.96"
sha256 = "1.1.4"
